# nolzapan

./: .flake8  .gitignore  README.md  logfile  manage.py  pyproject.toml  requirements.txt
chat/: consumers.py  routing.py
nolzapan/: asgi.py  settings.py  urls.py  wsgi.py
video/: admin.py  urls.py  views.py
video/forms/: video.py
video/migrations/: 0001_initial.py
video/templates/video/: video_list.html
